--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -1,3 +1,11 @@
 <div>
-  What's your name?
+  <% if @visitor %>
+    Hello, <%= @visitor %>!
+  <% else %>
+    <form action="/new_game">
+    What's your name?
+    <input type="text" name="name">
+    <input type ="submit" value="Submit">
+    </form>
+  <% end %>
 </div>
