--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -4,7 +4,7 @@
   <% else %>
     <form action="/new_game">
     What's your name?
-    <input type="text" name="name">
+    <input type="text" name="name" required>
     <input type ="submit" value="Submit">
     </form>
   <% end %>
